--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,3 +16,11 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+dependancies{
+//    classpath 'com.google.gms:google-services:4.3.10'
+//    id 'com.android.application'
+    classpath 'com.android.tools.build:gradle:7.3.0'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    //    id 'com.google.gms.google-services' version '4.4.1' apply false
+}
